--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
 
     - name: Set up Python
       uses: actions/setup-python@v2
-      with:
-        python-version: '3.11.5'
+      matrix:
+        python-version: [3.9, 3.10.x, 3.11]
 
     - name: Install dependencies
       run: pip install -r requirements.txt
