--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,30 +6,26 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      matrix:
-        python-version: [3.9, 3.10.x, 3.11]
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: make install
 
-    - name: Run tests
-      run: pytest
+      - name: Run tests
+        run: make test
 
-    - name: Generate Graph and Markdown
-      run: python main.py
+      - name: Run file
+        run: python main.py
 
-    - name: Lint
-      run: make lint
-
-    - name: format
-      run: make format
+      - name: Make lint
+        run: make lint
+        
+      - name: format
+        run: make format
